--- a/views/singleCourse.ejs
+++ b/views/singleCourse.ejs
@@ -2,7 +2,7 @@
 <html lang="en">  
 <head>
    <meta charset="UTF-8">
-   <title>Course - <%= course["full-form"] %></title>
+   <title>Course - <%= course.name %></title>
    <link rel="stylesheet" href="/singlecourse/css/style.css">
    <link rel="stylesheet" href="/singlecourse/css/responsive.css">
 
@@ -84,13 +84,13 @@
         <section id="saasio-breadcurmb" class="saasio-breadcurmb-section">
             <div class="container">
                 <div class="breadcurmb-title text-center">
-                    <h2><%= course["full-form"] %></h2>
+                    <h2><%= course.name %></h2>
                 </div>
                 <div class="breadcurmb-item-list text-center ul-li">
                    <ul class="saasio-page-breadcurmb">
                        <li><a href="/">Home</a></li>
                        <li><a href="/courses">Courses</a></li>
-                       <li><a href="/courses/<%= course.name %>"><%= course["full-form"] %></a></li>
+                       <li><a href="/courses/<%= course.id %>"><%= course.name %></a></li>
                    </ul>
                </div>
            </div>
@@ -100,111 +100,47 @@
         <section class="our-team pb40">
          <div class="container">
             <div class="row">
-               <div class="col-md-12 col-lg-8 col-xl-9">
+                <div class="col-md-0 col-lg-2">&nbsp;</div>
+               <div class="col-md-12 col-lg-8">
                   <div class="row">
                      <div class="col-lg-12">
                         <div class="courses_single_container">
                            <div class="cs_row_one">
-                              <div class="cs_ins_container">
-                                 <div class="cs_instructor">
-                                    <ul class="cs_instrct_list float-left mb0">
-                                       <li class="list-inline-item"><img class="thumb" src="/singlecourse/images/team/4.png" alt="4.png"></li>
-                                       <li class="list-inline-item"><a href="#">Ali TUFAN</a></li>
-                                       <li class="list-inline-item"><a href="#">Last updated 11/2019</a></li>
-                                    </ul>
-                                    <ul class="cs_watch_list float-right mb0">
-                                       <li class="list-inline-item"><a href="#"><span class="flaticon-like"></span></a></li>
-                                       <!-- <li class="list-inline-item"><a href="#">Add to Wishlist</a></li> -->
-                                       <li class="list-inline-item"><a href="#"><span class="flaticon-share"> Share</span></a></li>
-                                    </ul>
-                                 </div>
-                                 <h3 class="cs_title"><%= course["full-form"] %></h3>
-                                 <ul class="cs_review_seller">
-                                    <li class="list-inline-item"><a href="#"><span>Best Seller</span></a></li>
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
-                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
-                                    <li class="list-inline-item"><a href="#">4.5 (11,382 Ratings)</a></li>
-                                 </ul>
-                                 <ul class="cs_review_enroll">
-                                    <li class="list-inline-item"><a href="#"><span class="flaticon-profile"></span> 57,869 students enrolled</a></li>
-                                    <li class="list-inline-item"><a href="#"><span class="flaticon-comment"></span> 25 Review</a></li>
-                                 </ul>
-                              </div>
+														<h1 class="px-4"><%= course.name %></h1>
                            </div>
                            <div class="cs_row_two">
                               <div class="cs_overview">
                                  <h4 class="title">Overview</h4>
                                  <h4 class="subtitle">Course Description</h4>
-                                 <p class="mb30">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-                                 <p class="mb20">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                                 <h4 class="subtitle">What you'll learn</h4>
+                                 <p class="mb30"><%= course.description %></p>
+                                 <% for(let val of course.about){ %>
+                                    <p class="mb30"><%= val %></p>
+                                 <% } %>
+                                 <h4 class="subtitle">Duration</h4>
+                                 <p class="mb30"><%= course.duration %></p>
+                                 <h4 class="subtitle">Scope</h4>
                                  <ul class="cs_course_syslebus">
-                                    <li><i class="fa fa-check"></i><p>Become a UX designer.</p></li>
-                                    <li><i class="fa fa-check"></i><p>You will be able to add UX designer to your CV</p></li>
-                                    <li><i class="fa fa-check"></i><p>Become a UI designer.</p></li>
-                                    <li><i class="fa fa-check"></i><p>Build & test a full website design.</p></li>
-                                    <li><i class="fa fa-check"></i><p>Build & test a full mobile app.</p></li>
+                                    <% for(let val of course.scope){ %>
+                                    <li><i class="fa fa-check"></i><p><%= val %></p></li>
+                                    <% } %>
                                  </ul>
-                                 <ul class="cs_course_syslebus2">
-                                    <li><i class="fa fa-check"></i><p>Learn to design websites & mobile phone apps.</p></li>
-                                    <li><i class="fa fa-check"></i><p>You'll learn how to choose colors.</p></li>
-                                    <li><i class="fa fa-check"></i><p>Prototype your designs with interactions.</p></li>
-                                    <li><i class="fa fa-check"></i><p>Export production ready assets.</p></li>
-                                    <li><i class="fa fa-check"></i><p>All the techniques used by UX professionals</p></li>
-                                 </ul>
-                                 <h4 class="subtitle">Requirements</h4>
+                                 <h4 class="subtitle">Eligibility</h4>
                                  <ul class="list_requiremetn">
-                                    <li><i class="fa fa-circle"></i><p>You will need a copy of Adobe XD 2019 or above. A free trial can be downloaded from Adobe.</p></li>
-                                    <li><i class="fa fa-circle"></i><p>No previous design experience is needed.</p></li>
-                                    <li><i class="fa fa-circle"></i><p>No previous Adobe XD skills are needed.</p></li>
+                                    <% for(let val of course.eligibility){ %>
+                                        <li class="mb-3"><p><%= val %></p></li>
+                                    <% } %>
+
+                                    <% for(let val of course.age){ %>
+                                        <li class="mb-3"><p><%= val %></p></li>
+                                    <% } %>
                                  </ul>
+                                 <h4 class="subtitle">Salary</h4>
+                                 <p class="mb30"><%= course.salary %></p>
                               </div>
                            </div>
                      
                         </div>
                      </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-xl-3">
-                  <div class="instructor_pricing_widget">
-                     <div class="price"><span>Price</span> $49.00 <small>$69.00</small></div>
-                     <a href="#" class="cart_btnss">Add To Cart</a>
-                     <a href="#" class="cart_btnss_white">Buy Now</a>
-                     <h5 class="subtitle text-left">Includes</h5>
-                     <ul class="price_quere_list text-left">
-                        <li><a href="#"> 11 hours on-demand video</a></li>
-                        <li><a href="#"> 69 downloadable resources</a></li>
-                        <li><a href="#"> Full lifetime access</a></li>
-                        <li><a href="#"> Access on mobile and TV</a></li>
-                        <li><a href="#"> Assignments</a></li>
-                        <li><a href="#"> Certificate of Completion</a></li>
-                     </ul>
-                  </div>
-                  <div class="feature_course_widget">
-                     <ul class="list-group">
-                        <h4 class="title">Course Features</h4>
-                        <li class="d-flex justify-content-between align-items-center">
-                            Lectures <span class="float-right">6</span>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            Quizzes <span class="float-right">1</span>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            Duration <span class="float-right">3 hours</span>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            Skill level <span class="float-right">All level</span>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            Language <span class="float-right">English</span>
-                        </li>
-                        <li class="d-flex justify-content-between align-items-center">
-                            Assessments <span class="float-right">Yes</span>
-                        </li>
-                     </ul>
                   </div>
                </div>
             </div>
