--- a/views/singleCourse.ejs
+++ b/views/singleCourse.ejs
@@ -90,7 +90,7 @@
                    <ul class="saasio-page-breadcurmb">
                        <li><a href="/">Home</a></li>
                        <li><a href="/courses">Courses</a></li>
-                       <li><a href="/courses/<%= course.id %>"><%= course.name %></a></li>
+                       <li><a href="/courses/<%= course.id%>"><%= course.name %></a></li>
                    </ul>
                </div>
            </div>
@@ -100,13 +100,39 @@
         <section class="our-team pb40">
          <div class="container">
             <div class="row">
-                <div class="col-md-0 col-lg-2">&nbsp;</div>
-               <div class="col-md-12 col-lg-8">
+               <div class="col-md-12 col-lg-8 col-xl-9">
                   <div class="row">
                      <div class="col-lg-12">
                         <div class="courses_single_container">
                            <div class="cs_row_one">
-														<h1 class="px-4"><%= course.name %></h1>
+                              <div class="cs_ins_container">
+                                 <div class="cs_instructor">
+                                    <ul class="cs_instrct_list float-left mb0">
+                                       <li class="list-inline-item"><img class="thumb" src="/singlecourse/images/team/4.png" alt="4.png"></li>
+                                       <li class="list-inline-item"><a href="#">Ali TUFAN</a></li>
+                                       <li class="list-inline-item"><a href="#">Last updated 11/2019</a></li>
+                                    </ul>
+                                    <ul class="cs_watch_list float-right mb0">
+                                       <li class="list-inline-item"><a href="#"><span class="flaticon-like"></span></a></li>
+                                       <!-- <li class="list-inline-item"><a href="#">Add to Wishlist</a></li> -->
+                                       <li class="list-inline-item"><a href="#"><span class="flaticon-share"> Share</span></a></li>
+                                    </ul>
+                                 </div>
+                                 <h3 class="cs_title"><%= course.name %></h3>
+                                 <ul class="cs_review_seller">
+                                    <li class="list-inline-item"><a href="#"><span>Best Seller</span></a></li>
+                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
+                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
+                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
+                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
+                                    <li class="list-inline-item"><a href="#"><i class="fa fa-star"></i></a></li>
+                                    <li class="list-inline-item"><a href="#">4.5 (11,382 Ratings)</a></li>
+                                 </ul>
+                                 <ul class="cs_review_enroll">
+                                    <li class="list-inline-item"><a href="#"><span class="flaticon-profile"></span> 57,869 students enrolled</a></li>
+                                    <li class="list-inline-item"><a href="#"><span class="flaticon-comment"></span> 25 Review</a></li>
+                                 </ul>
+                              </div>
                            </div>
                            <div class="cs_row_two">
                               <div class="cs_overview">
@@ -141,6 +167,26 @@
                      
                         </div>
                      </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-xl-3">
+                  <div class="instructor_pricing_widget">
+                     <div class="price">
+                        Paid Course
+                        <!-- <span>Paid</span> $49.00  -->
+                        <!-- <small>$69.00</small> -->
+                    </div>
+                     <a href="#" class="cart_btnss">Enroll</a>
+                     <a href="#" class="cart_btnss_white">Talk to an expert</a>
+                     <h5 class="subtitle text-left">Includes</h5>
+                     <ul class="price_quere_list text-left">
+                        <li><a href="#"> 11 hours on-demand video</a></li>
+                        <li><a href="#"> 69 downloadable resources</a></li>
+                        <li><a href="#"> Full lifetime access</a></li>
+                        <li><a href="#"> Access on mobile and TV</a></li>
+                        <li><a href="#"> Assignments</a></li>
+                        <li><a href="#"> Certificate of Completion</a></li>
+                     </ul>
                   </div>
                </div>
             </div>
@@ -237,7 +283,7 @@
                 </div>
             </div>
         </footer>
-        <div class="s2-copyright text-center">2021 © All rights reserved by <a href="#">Themexriver</a></div>
+        <div class="s2-copyright text-center">2021 © All rights reserved by <a href="/">Ace Education</a></div>
     <!-- End of footer section 
         ============================================= -->
 
