--- a/public/slick/slick-theme.css
+++ b/public/slick/slick-theme.css
@@ -27,12 +27,16 @@
 
     display: block;
 
-    width: 20px;
-    height: 20px;
+    /*width: 20px;*/
+    /*height: 20px;*/
     padding: 0;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
+    
+    background-image: linear-gradient(-45deg, #e511e6 32%, #6b2c94 100%) !important;
+    padding: 10px;
+    border-radius: 10px;
 
     cursor: pointer;
 
@@ -67,11 +71,11 @@
 .slick-next:before
 {
     font-family: 'slick';
-    font-size: 20px;
+    font-size: 15px;
     line-height: 1;
 
     opacity: .75;
-    color: white;
+    color: black;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -79,7 +83,9 @@
 
 .slick-prev
 {
-    left: -25px;
+    /* left: -25px; */
+    left: -10px;
+    z-index: 555;
 }
 [dir='rtl'] .slick-prev
 {
@@ -88,7 +94,10 @@
 }
 .slick-prev:before
 {
-    content: '←';
+    content: 'Prev';
+    color: #fff;
+    font-weight: 600;
+    font-family: "Poppins";
 }
 [dir='rtl'] .slick-prev:before
 {
@@ -97,7 +106,9 @@
 
 .slick-next
 {
-    right: -25px;
+    /* right: -25px; */
+    right: 0;
+    z-index: 555;
 }
 [dir='rtl'] .slick-next
 {
@@ -106,7 +117,10 @@
 }
 .slick-next:before
 {
-    content: '→';
+    content: 'Next';
+    color: #fff;
+    font-weight: 600;
+    font-family: "Poppins";
 }
 [dir='rtl'] .slick-next:before
 {
@@ -201,4 +215,24 @@
 {
     opacity: .75;
     color: black;
+}
+
+.service_content {
+    position: relative;
+}
+
+.slick-prev  {
+    position: absolute;
+    top: unset;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-150%, 100%);
+}
+
+.slick-next  {
+    position: absolute;
+    top: unset;
+    bottom: 0;
+    right: 50%;
+    transform: translate(150%, 100%);
 }
