--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,18 @@
-<%- include ('partials/header') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>NICE EDUCATION||Courses</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="msapplication-TileColor" content="#61bfc1">
+  <meta name="msapplication-TileImage" content="/img/lo1.jpeg">
+  <meta name="theme-color" content="#61bfc1">
+  <link rel="shortcut icon" href="assets/img/education/logo/lo.png" type="image/x-icon">
+  <link rel="stylesheet" href="/css/404.css">
 
-<link rel="stylesheet" href="/css/404.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
 <div class="wrapper" style="width:80%; margin:auto;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080">
     <title>404</title>
@@ -129,13 +141,7 @@
       <path class="cls-7" d="M1021.29,654l-17.73,6.15,1.72,5.59-31.41,82.36c-19.35,32.53-66.3,36.72-75.56,16.68l-7.09-21.5L879,747.1l3.28,10.09-94.65,33.95c-11.49,2.29-11.85,15.79-2.61,17.84,0,0,39.11,3.66,103,9.5a92.75,92.75,0,0,0,40.89-5.29c44.32-16.56,57.73-50.67,57.73-50.67l26.82-67.26a1.37,1.37,0,0,1,2.53,0l1.42,3.33,17.75-7.62Z"/>
     </g>
   </svg>
+</div>
 
-  <div class="home-btn">
-    <a href="https://paradigmclasses.online" class="link">Back to Homepage</a>
-  </div>
-  </div>
-
-
-<%- include ('partials/footer') %>
-
+</body>
 </html>
