--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Courses</title>
+   <title>All Courses - Nice Education</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="msapplication-TileColor" content="#61bfc1">
+   <meta name="msapplication-TileImage" content="/img/lo1.jpeg">
+   <meta name="theme-color" content="#61bfc1">
+   
    <link rel="shortcut icon" href="assets/img/education/logo/lo.png" type="image/x-icon">
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
    <link rel="stylesheet" href="assets/css/animate.css">
@@ -14,6 +18,8 @@
    <link rel="stylesheet" href="assets/css/style.css">
    <link rel="stylesheet" href="assets/css/education.css">
 
+   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.css" integrity="sha512-UTNP5BXLIptsaj5WdKFrkFov94lDx+eBvbKyoe1YAfjeRPC+gT5kyZ10kOHCfNZqEui1sxmqvodNUx3KbuYI/A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css" integrity="sha512-OTcub78R3msOCtY3Tc6FzeDJ8N9qvQn1Ph49ou13xgA9VsH9+LRxoFU6EqLhW4+PKRfU+/HReXmSZXHEkpYoOA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
    <link rel="stylesheet" href="slick/slick.css">
    <link rel="stylesheet" href="slick/slick-theme.css">
@@ -23,8 +29,9 @@
 </head>
 
 <body class="saas-classic">
+<%- include('partials/marquee') %>
 <!-- preloader - start -->
-<!-- <div id="preloader" class="saas-classic-preloader"></div> -->
+ <div id="preloader" class="saas-classic-preloader"></div> 
 <div class="up">
     <a href="#" id="scrollup" class="saas-classic-scrollup text-center"><i class="fas fa-angle-up"></i></a>
 </div>
@@ -42,7 +49,7 @@
               <nav class="app-edu-main-navigation float-right clearfix ul-li">
                   <ul id="app-edu-main-nav" class="nav navbar-nav clearfix">
                       <li class="side-demo position-relative"><a href="/">Home</a></li>
-                      <li><a href="/about">About</a></li>
+                      <li><a href="#">About</a></li>
                       <li><a href="#">Team</a></li>
                       <li><a href="/courses" >Courses</a></li>
                       <li><a href="#">Contact</a></li>
@@ -66,7 +73,7 @@
                       <nav class="app-edu-mobile-main-navigation  clearfix ul-li">
                        <ul id="m-main-nav" class="navbar-nav text-capitalize clearfix">
                           <li ><a href="/">Home</a></li>
-                          <li><a href="/about">About</a></li>
+                          <li><a href="#">About</a></li>
                           <li><a href="#">Team</a></li>
                           <li><a href="/courses">Courses</a></li>
                           <li><a href="#">Contact</a></li>
@@ -104,7 +111,7 @@
     <section id="saas_two_service" class="saas_two_service_section">
         <div class="container">
             <div class="saas_two_section_title saas2-headline text-center">
-                <span class="title_tag">Our awesome services</span>
+                <span class="title_tag">Our awesome courses</span>
                 <h2>We  give <span>best facilites
                 </span> </h2>
             </div>
@@ -113,9 +120,26 @@
 
                <div class="" id="courses">
                   <!-- <div class="loading1"></div> -->
+                <% for(let val of course) { %>
+                    <div class="courses-item" data-wow-delay="600ms" data-wow-duration="1500ms">
+                    <div class="service_content_box relative-position">
+                       <div class="service_text_box saas2-headline pera-content">
+                          <a href="/courses/<%= val.id %>">
+                            <h3><%= val.name %></h3>
+                          </a>
+                       </div>
+                       <div class="view-more-btn">
+                          <a href="/courses/<%= val.id %>">View More</a>
+                       </div>
+                    </div>
+                    </div>
+                <% } %>
                </div>
 
             </div>
+                <!-- <div class="service_read_more text-center">
+                    <a href="%21.html#">Want to download this app? </a>
+                </div> -->
          </div>
         </section>
 <!-- End of Service section
@@ -123,44 +147,44 @@
 
 <!-- Start of App Download  section
     ============================================= -->
-    <section id="ei-appdownload" class="ei-appdownload-section position-relative" data-background="assets/img/app-landing/background/appbg1.png">
-        <div class="container">
-            <div class="ei-appdownload-content">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="ei-app-mockup-img  wow fadeFromRight" data-wow-delay="300ms" data-wow-duration="1500ms">
-                            <img src="assets/img/app-landing/mockup/amu1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="ei-app-down-text wow fadeFromLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
-                            <div class="eight-section-title appeight-headline pera-content text-left">
-                                <span class="eg-title-tag">
-                                    App Download<i class="square-shape"><i></i><i></i><i></i><i></i></i>
-                                </span>
-                                <h2>This app is available for
-                                    <span>your smart phone.</span>
-                                </h2>
-                                <p>As a SAAS web crawler expert, I help organizations adjust to the expanding significance of internet promoting.</p>
-                            </div>
-                            <div class="app-down-btn">
-                                <a href="#"><img src="assets/img/app-landing/shape/btn1.png" alt=""></a>
-                                <a href="#"><img src="assets/img/app-landing/shape/btn2.png" alt=""></a>
-                            </div>
-                            <div class="ei-download-btn pera-content">
-                                <div class="download-icon float-left"><i class="flaticon-idea"></i></div>
-                                <p>Are you interested for this app?</p>
-                                <a href="#">Learn More </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="ei-appdownloaad-shape app-shape1" data-parallax='{"y" : -100}'><img src="assets/img/app-landing/background/apps1.png" alt=""></div>
-        <div class="ei-appdownloaad-shape app-shape2" data-parallax='{"x" : -120}'><img src="assets/img/app-landing/background/apps2.png" alt=""></div>
-        <div class="ei-appdownloaad-shape app-shape3" data-parallax='{"y" : -100}'><img src="assets/img/app-landing/background/apps3.png" alt=""></div>
-    </section>
+    <!--<section id="ei-appdownload" class="ei-appdownload-section position-relative" data-background="assets/img/app-landing/background/appbg1.png">-->
+    <!--    <div class="container">-->
+    <!--        <div class="ei-appdownload-content">-->
+    <!--            <div class="row">-->
+    <!--                <div class="col-lg-6">-->
+    <!--                    <div class="ei-app-mockup-img  wow fadeFromRight" data-wow-delay="300ms" data-wow-duration="1500ms">-->
+    <!--                        <img src="assets/img/app-landing/mockup/amu1.png" alt="">-->
+    <!--                    </div>-->
+    <!--                </div>-->
+    <!--                <div class="col-lg-6">-->
+    <!--                    <div class="ei-app-down-text wow fadeFromLeft" data-wow-delay="600ms" data-wow-duration="1500ms">-->
+    <!--                        <div class="eight-section-title appeight-headline pera-content text-left">-->
+    <!--                            <span class="eg-title-tag">-->
+    <!--                                App Download<i class="square-shape"><i></i><i></i><i></i><i></i></i>-->
+    <!--                            </span>-->
+    <!--                            <h2>This app is available for-->
+    <!--                                <span>your smart phone.</span>-->
+    <!--                            </h2>-->
+    <!--                            <p>As a SAAS web crawler expert, I help organizations adjust to the expanding significance of internet promoting.</p>-->
+    <!--                        </div>-->
+    <!--                        <div class="app-down-btn">-->
+    <!--                            <a href="#"><img src="assets/img/app-landing/shape/btn1.png" alt=""></a>-->
+    <!--                            <a href="#"><img src="assets/img/app-landing/shape/btn2.png" alt=""></a>-->
+    <!--                        </div>-->
+    <!--                        <div class="ei-download-btn pera-content">-->
+    <!--                            <div class="download-icon float-left"><i class="flaticon-idea"></i></div>-->
+    <!--                            <p>Are you interested for this app?</p>-->
+    <!--                            <a href="#">Learn More </a>-->
+    <!--                        </div>-->
+    <!--                    </div>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <!--    <div class="ei-appdownloaad-shape app-shape1" data-parallax='{"y" : -100}'><img src="assets/img/app-landing/background/apps1.png" alt=""></div>-->
+    <!--    <div class="ei-appdownloaad-shape app-shape2" data-parallax='{"x" : -120}'><img src="assets/img/app-landing/background/apps2.png" alt=""></div>-->
+    <!--    <div class="ei-appdownloaad-shape app-shape3" data-parallax='{"y" : -100}'><img src="assets/img/app-landing/background/apps3.png" alt=""></div>-->
+    <!--</section>-->
 <!-- End of App Download section
     ============================================= -->
 
@@ -498,7 +522,7 @@
             </div>
         </div>
     </footer>
-    <div class="s2-copyright text-center">All rights reserved © 2021 Ace Education</div>
+    <div class="s2-copyright text-center">All rights reserved © <script>document.write(new Date().getFullYear());</script> NICE EDUCATION</div>
 <!-- End of footer section 
     ============================================= -->
 
@@ -517,8 +541,9 @@
    <script src="assets/js/side-demo.js"></script>
    <script src="assets/js/script.js"></script>
    <script src="assets/js/education.js"></script>
-      
-    <script src="slick/slick.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+   
+    <script src="slick/slick.min.js"></script>
     <script src="js/courses.js"></script>
 </body>
 </html>          
